カードUI版に対応した 最新の index.html
✔ ペット選択 UI がカード式
<div id="petCards" class="pet-cards"></div>
script.js の renderPetCards() と完全連動。
✔ 説明文表示欄
<div id="petDescription"></div>
プリセットの説明文（白ネザーランドドワーフなど）が表示される。
✔ 画像/動画表示領域
petImage と petVideo を script.js が切り替える。
✔ ペット管理（追加・編集・削除）
既存の UI と完全互換。
✔ Mediapipe（FaceMesh / FaceDetection）
必要な CDN を head に読み込み済み。

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 <div id="main">
 
-    <!-- ペット選択 -->
+    <!-- ペット選択（カードUI） -->
     <h2>ペットを選択</h2>
-    <select id="petSelect"></select>
+    <div id="petCards" class="pet-cards"></div>
 
     <!-- 説明文表示 -->
     <div id="petDescription"></div>
