--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <!-- Mediapipe / Camera -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/face_detection.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
 
 </head>
 <body>
@@ -74,36 +74,38 @@
             <input id="editKeywords" type="text">
         </div>
 
-        <h3>画像（静止画）</h3>
-        <label>通常の姿（n1）</label>
+        <!-- 画像（静止画） -->
+        <h3 id="imgHeader">画像（静止画）</h3>
+        <label id="lbl_n1">通常の姿（n1）</label>
         <input id="img_n1" type="file" accept="image/*">
 
-        <label>待っている姿（n2）</label>
+        <label id="lbl_n2">待っている姿（n2）</label>
         <input id="img_n2" type="file" accept="image/*">
 
-        <label>寝ている姿（n3）</label>
+        <label id="lbl_n3">寝ている姿（n3）</label>
         <input id="img_n3" type="file" accept="image/*">
 
-        <label>伏せの姿（p3）</label>
+        <label id="lbl_p3">伏せの姿（p3）</label>
         <input id="img_p3" type="file" accept="image/*">
 
-        <label>お手の姿（p4）</label>
+        <label id="lbl_p4">お手の姿（p4）</label>
         <input id="img_p4" type="file" accept="image/*">
 
-        <h3>動画（動きのある姿）</h3>
-        <label>一人遊び・散歩（p1）</label>
+        <!-- 動画（動きのある姿） -->
+        <h3 id="vidHeader">動画（動きのある姿）</h3>
+        <label id="lbl_p1">一人遊び・散歩（p1）</label>
         <input id="vid_p1" type="file" accept="video/*">
 
-        <label>呼ばれた時の反応 / 喜び（p2）</label>
+        <label id="lbl_p2">呼ばれた時の反応 / 喜び（p2）</label>
         <input id="vid_p2" type="file" accept="video/*">
 
-        <label>ごはんを食べる（p5）</label>
+        <label id="lbl_p5">ごはんを食べる（p5）</label>
         <input id="vid_p5" type="file" accept="video/*">
 
-        <label>水を飲む（p6）</label>
+        <label id="lbl_p6">水を飲む（p6）</label>
         <input id="vid_p6" type="file" accept="video/*">
 
-        <label>トイレの様子（p7）</label>
+        <label id="lbl_p7">トイレの様子（p7）</label>
         <input id="vid_p7" type="file" accept="video/*">
 
         <button id="savePetBtn">保存</button>
