--- a/index.html
+++ b/index.html
@@ -1,113 +1,75 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI Pet App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My AI Pet</title>
 
-<link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
+  <!-- PWA -->
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
 
-<!-- Mediapipe / Camera（★バージョン固定） -->
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.4.1646424915/camera_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection@0.4.1646424915/face_detection.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh@0.4.1633559619/face_mesh.js"></script>
+  <link rel="stylesheet" href="style.css">
 
+  <!-- ★ Mediapipe（旧 API 安定版 0.3） -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.3/camera_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh@0.3/face_mesh.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection@0.3/face_detection.js"></script>
 </head>
+
 <body>
+  <div id="container">
+    <h1>My AI Pet</h1>
 
-<header>
-    <h1>AI ペットアプリ</h1>
-</header>
+    <select id="pet-select">
+      <option value="usako">Usako（白うさぎ）</option>
+      <option value="kuro">Kuro（黒うさぎ）</option>
+      <option value="taro">Taro（パピヨン子犬）</option>
+      <option value="marple">Marple（トイプードル）</option>
+      <option value="pochi">Pochi（柴犬子犬）</option>
+      <option value="tama">Tama（猫）</option>
+    </select>
 
-<div id="main">
+    <button id="custom-btn">呼び名・言葉設定</button>
 
-    <h2>ペットを選択</h2>
-    <div id="petCards" class="pet-cards"></div>
-
-    <div id="petDescription"></div>
-
-    <div id="pet-container">
-        <img id="petImage" style="display:none;">
-        <video id="petVideo" style="display:none;" playsinline muted autoplay></video>
+    <div id="pet-area">
+      <video id="pet-video" autoplay muted loop playsinline></video>
+      <img id="pet-img" src="" alt="ペット">
     </div>
 
-    <div id="log"></div>
+    <div id="status">準備完了！ペットを選んで遊んでね</div>
 
-    <h2>ペット管理</h2>
-    <div id="petManager">
-        <button id="addPetBtn">ペットを追加</button>
-        <div id="petList"></div>
+    <div id="controls">
+      <button id="mic-btn">🎤 音声認識</button>
+      <button id="camera-btn">📷 笑顔検知</button>
     </div>
 
-    <div id="petEditor" style="display:none;">
-        <h3>ペット編集</h3>
+    <video id="input-video" style="display:none;"></video>
 
-        <div class="form-group">
-            <label>名前</label>
-            <input id="editName" type="text">
-        </div>
+    <audio id="bark-sound"></audio>
+    <audio id="eating-sound" src="assets/sounds/eating.mp3" loop></audio>
+    <audio id="drinking-sound" src="assets/sounds/drinking.mp3" loop></audio>
+  </div>
 
-        <div class="form-group">
-            <label>種類</label>
-            <select id="editSpecies">
-                <option value="rabbit">ウサギ</option>
-                <option value="dog">犬</option>
-                <option value="cat">猫</option>
-            </select>
-        </div>
+  <!-- カスタム設定モーダル -->
+  <div id="custom-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:100; display:flex; justify-content:center; align-items:center;">
+    <div style="background:white; padding:30px; border-radius:16px; width:90%; max-width:400px; text-align:center; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
+      <h2>呼び名・言葉設定</h2>
+      <p>現在のペット: <strong id="modal-pet-name"></strong></p>
 
-        <h3>呼び名・声掛け設定</h3>
+      <label for="custom-name" style="display:block; margin:20px 0 10px; font-weight:bold;">表示名（呼び名）</label>
+      <input id="custom-name" type="text" placeholder="例: ジロ" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
 
-        <div class="form-group">
-            <label>呼び名（名前呼び）</label>
-            <input id="editAlias" type="text">
-        </div>
+      <label for="custom-keywords" style="display:block; margin:20px 0 10px; font-weight:bold;">喜びトリガー言葉（カンマ区切り）</label>
+      <input id="custom-keywords" type="text" placeholder="例: グッド, いい子ね, 可愛いね, おりこう" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
 
-        <div class="form-group">
-            <label>声掛けキーワード（カンマ区切り）</label>
-            <input id="editKeywords" type="text">
-        </div>
-
-        <h3 id="imgHeader">画像（静止画）</h3>
-        <label>通常の姿（n1）</label>
-        <input id="img_n1" type="file" accept="image/*">
-
-        <label>待っている姿（n2）</label>
-        <input id="img_n2" type="file" accept="image/*">
-
-        <label>寝ている姿（n3）</label>
-        <input id="img_n3" type="file" accept="image/*">
-
-        <label>伏せの姿（p3）</label>
-        <input id="img_p3" type="file" accept="image/*">
-
-        <label>お手の姿（p4）</label>
-        <input id="img_p4" type="file" accept="image/*">
-
-        <h3 id="vidHeader">動画（動きのある姿）</h3>
-        <label>一人遊び・散歩（p1）</label>
-        <input id="vid_p1" type="file" accept="video/*">
-
-        <label>呼ばれた時の反応 / 喜び（p2）</label>
-        <input id="vid_p2" type="file" accept="video/*">
-
-        <label>ごはんを食べる（p5）</label>
-        <input id="vid_p5" type="file" accept="video/*">
-
-        <label>水を飲む（p6）</label>
-        <input id="vid_p6" type="file" accept="video/*">
-
-        <label>トイレの様子（p7）</label>
-        <input id="vid_p7" type="file" accept="video/*">
-
-        <button id="savePetBtn">保存</button>
-        <button id="cancelEditBtn" class="cancel">キャンセル</button>
+      <div style="margin-top:30px;">
+        <button id="save-custom" style="padding:12px 24px; background:#4CAF50; color:white; border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">保存</button>
+        <button id="close-modal" style="padding:12px 24px; background:#ccc; color:#333; border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">閉じる</button>
+      </div>
     </div>
+  </div>
 
-</div>
-
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
