--- a/index.html
+++ b/index.html
@@ -4,23 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My AI Pet</title>
-
-  <!-- PWA -->
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="icons/icon-192.png">
-
   <link rel="stylesheet" href="style.css">
-
-  <!-- ★ Mediapipe（旧 API 安定版 0.3） -->
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.3/camera_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh@0.3/face_mesh.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection@0.3/face_detection.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
 </head>
-
 <body>
   <div id="container">
     <h1>My AI Pet</h1>
-
     <select id="pet-select">
       <option value="usako">Usako（白うさぎ）</option>
       <option value="kuro">Kuro（黒うさぎ）</option>
@@ -51,12 +43,12 @@
     <audio id="drinking-sound" src="assets/sounds/drinking.mp3" loop></audio>
   </div>
 
-  <!-- カスタム設定モーダル -->
+  <!-- カスタム設定モーダル（これが重要！！） -->
   <div id="custom-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:100; display:flex; justify-content:center; align-items:center;">
     <div style="background:white; padding:30px; border-radius:16px; width:90%; max-width:400px; text-align:center; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
       <h2>呼び名・言葉設定</h2>
       <p>現在のペット: <strong id="modal-pet-name"></strong></p>
-
+      
       <label for="custom-name" style="display:block; margin:20px 0 10px; font-weight:bold;">表示名（呼び名）</label>
       <input id="custom-name" type="text" placeholder="例: ジロ" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
 
