--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My AI Pet</title>
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="icons/icon-192.png">
+
+  <!-- PWA（GitHub Pages 用にパス修正） -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="favicon.ico">
+
   <link rel="stylesheet" href="style.css">
+
+  <!-- Mediapipe（pet‑app1 と同じ構成：FaceMesh + CameraUtils のみ） -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
 </head>
+
 <body>
   <div id="container">
     <h1>My AI Pet</h1>
+
     <select id="pet-select">
       <option value="usako">Usako（白うさぎ）</option>
       <option value="kuro">Kuro（黒うさぎ）</option>
@@ -36,28 +43,52 @@
       <button id="camera-btn">📷 笑顔検知</button>
     </div>
 
+    <!-- FaceMesh 用の入力ビデオ -->
     <video id="input-video" style="display:none;"></video>
 
+    <!-- サウンド -->
     <audio id="bark-sound"></audio>
     <audio id="eating-sound" src="assets/sounds/eating.mp3" loop></audio>
     <audio id="drinking-sound" src="assets/sounds/drinking.mp3" loop></audio>
   </div>
 
-  <!-- カスタム設定モーダル（これが重要！！） -->
-  <div id="custom-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:100; display:flex; justify-content:center; align-items:center;">
-    <div style="background:white; padding:30px; border-radius:16px; width:90%; max-width:400px; text-align:center; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
+  <!-- カスタム設定モーダル -->
+  <div id="custom-modal" style="
+      display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+      background:rgba(0,0,0,0.6); z-index:100; display:flex;
+      justify-content:center; align-items:center;">
+    <div style="
+        background:white; padding:30px; border-radius:16px;
+        width:90%; max-width:400px; text-align:center;
+        box-shadow:0 10px 30px rgba(0,0,0,0.3);">
+      
       <h2>呼び名・言葉設定</h2>
       <p>現在のペット: <strong id="modal-pet-name"></strong></p>
-      
-      <label for="custom-name" style="display:block; margin:20px 0 10px; font-weight:bold;">表示名（呼び名）</label>
-      <input id="custom-name" type="text" placeholder="例: ジロ" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
 
-      <label for="custom-keywords" style="display:block; margin:20px 0 10px; font-weight:bold;">喜びトリガー言葉（カンマ区切り）</label>
-      <input id="custom-keywords" type="text" placeholder="例: グッド, いい子ね, 可愛いね, おりこう" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
+      <label for="custom-name" style="display:block; margin:20px 0 10px; font-weight:bold;">
+        表示名（呼び名）
+      </label>
+      <input id="custom-name" type="text" placeholder="例: ジロ"
+             style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
+
+      <label for="custom-keywords" style="display:block; margin:20px 0 10px; font-weight:bold;">
+        喜びトリガー言葉（カンマ区切り）
+      </label>
+      <input id="custom-keywords" type="text"
+             placeholder="例: グッド, いい子ね, 可愛いね, おりこう"
+             style="width:100%; padding:12px; border:1px solid #ddd; border-radius:8px;">
 
       <div style="margin-top:30px;">
-        <button id="save-custom" style="padding:12px 24px; background:#4CAF50; color:white; border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">保存</button>
-        <button id="close-modal" style="padding:12px 24px; background:#ccc; color:#333; border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">閉じる</button>
+        <button id="save-custom"
+                style="padding:12px 24px; background:#4CAF50; color:white;
+                       border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">
+          保存
+        </button>
+        <button id="close-modal"
+                style="padding:12px 24px; background:#ccc; color:#333;
+                       border:none; border-radius:8px; font-size:16px; cursor:pointer; margin:0 10px;">
+          閉じる
+        </button>
       </div>
     </div>
   </div>
