index.html に「pet-list」を追加
HTML に pet-list 追加　
- renderPetCards() が正常に動く
- ペットカード（Usako / Kuro / Taro…）が表示される
- ペットを選べる
- ペット画像が表示される
- 呼び名設定が動く
- 状態遷移が動く

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
 
     <div id="status">準備完了！ペットを選んで遊んでね</div>
+    <div id="pet-list" class="pet-list"></div>
 
     <div id="controls">
       <button id="mic-btn">🎤 音声認識</button>
