--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <!-- ★ 新しいモード一覧 UI（ここを追加） -->
+  <!-- ★ 新しいモード一覧 UI -->
   <div id="mode-list" class="mode-list">
     <button data-mode="n2">お座り</button>
     <button data-mode="n3">寝んね</button>
@@ -62,6 +62,10 @@
     <p>モードを選択してください。</p>
   </div>
 
+  <!-- ★ 最重要：auth.js を最初に読み込む -->
+  <script src="auth.js"></script>
+
+  <!-- ★ 次に script.js を読み込む（auth.js より後） -->
   <script src="script.js"></script>
 
 </body>
