--- a/pet-register.html
+++ b/pet-register.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pet-app2 | ペット登録</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>ペット登録</title>
+
+  <!-- Supabase CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- Supabase 初期化 -->
+  <script>
+    const supabase = supabase.createClient(
+      "https://lcpkqaoaqsotjaydukxs.supabase.co",
+      "sb_publishable__fsG5IT4g30OLUOKchn79g_W4vFv6k8"
+    );
+  </script>
+
+  <link rel="stylesheet" href="p2.css">
 </head>
 
 <body>
