--- a/auth.html
+++ b/auth.html
@@ -19,6 +19,6 @@
   </div>
 
   <script src="supabaseClient.js"></script>
-  <script src="script.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
