--- a/auth.html
+++ b/auth.html
@@ -15,7 +15,7 @@
 
     <button id="sendLinkBtn">Magic Link を送る</button>
 
-    <p id="message"></p>
+    <p id="authMessage"></p>
   </div>
 
   <script src="supabaseClient.js"></script>
