--- a/auth.html
+++ b/auth.html
@@ -18,7 +18,7 @@
     <p id="authMessage"></p>
   </div>
 
-  <script src="supabaseClient.js"></script>
-  <script src="auth.js"></script>
+  <script src="supabaseClient.js" type="module"></script>
+  <script src="auth.js" type="module"></script>
 </body>
 </html>
