--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <p>モードを選択してください。</p>
   </div>
 
-  <!-- ★ 最重要：auth.js を最初に読み込む -->
-  <script src="auth.js"></script>
+  <!-- ★ 最重要：auth.js を最初に読み込む（module 必須） -->
+  <script type="module" src="auth.js"></script>
 
-  <!-- ★ 次に script.js を読み込む（auth.js より後） -->
-  <script src="script.js"></script>
+  <!-- ★ 次に script.js を読み込む（module 必須） -->
+  <script type="module" src="script.js"></script>
 
 </body>
 </html>
