--- a/pet-register.html
+++ b/pet-register.html
@@ -95,6 +95,18 @@
 
   </div>
 
+  <!-- Supabase SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
+  <!-- Supabase 初期化（★あなたのプロジェクトURLとanon keyを入れてください） -->
+  <script>
+    window.supabase = supabase.createClient(
+      "https://YOUR-PROJECT-ID.supabase.co",
+      "YOUR-PUBLIC-ANON-KEY"
+    );
+  </script>
+
+  <!-- 保存処理 -->
   <script src="pet-register.js"></script>
 
 </body>
