pet-register.html他修正
pet-register.html, pet-register.js

--- a/pet-register.html
+++ b/pet-register.html
@@ -95,15 +95,17 @@
 
   </div>
 
-  <!-- Supabase SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <!-- Supabase SDK v2（必須） -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <!-- Supabase 初期化（★あなたのプロジェクトURLとanon keyを入れてください） -->
+  <!-- Supabase 初期化 -->
   <script>
-    window.supabase = supabase.createClient(
-      "https://YOUR-PROJECT-ID.supabase.co",
-      "YOUR-PUBLIC-ANON-KEY"
-    );
+    const SUPABASE_URL = "https://lcpkqaoaqsotjaydukxs.supabase.co";
+    const SUPABASE_ANON_KEY = "sb_publishable__fsG5IT4g30OLUOKchn79g_W4vFv6k8";
+
+    window.supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    console.log("Supabase client initialized:", window.supabase);
   </script>
 
   <!-- 保存処理 -->
