--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <script src="api-client.js"></script>
 
   <!-- script.js（あなたのロジック） -->
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 
   <script>
     window.addEventListener("DOMContentLoaded", () => {
