キャッシュを破壊

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <script src="api-client.js"></script>
 
   <!-- script.js（あなたのロジック） -->
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 
   <script>
     window.addEventListener("DOMContentLoaded", () => {
