--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- API設定 & クライアント -->
   <script src="api-config.js"></script>
-  <script src="api-client-v2.js"></script>
+  <script src="api-client-v2.js?v=3"></script>
 
   <!-- script.js（あなたのロジック） -->
   <script src="script.js"></script>
